--- a/blog.html
+++ b/blog.html
@@ -26,27 +26,46 @@
     <div class="collapse bg-base-100 border border-base-300">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold">Question-1: What are the different ways to select an element in the DOM?</div>
-      <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-sm">There are different ways to select an element in the DOM,such as 1.Using getElementById
+        2.Using getElemenstByClassName
+        3.Using getElementsByTagName
+        4.Using querySelectorAll
+        5.Using querySelector
+      </div>
     </div>
     <div class="collapse bg-base-100 border border-base-300">
       <input type="radio" name="my-accordion-1" />
       <div class="collapse-title font-semibold">Question-2: What is the difference between innerHTML, innerText, and textContent ?</div>
-      <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the instructions sent to your email.</div>
+      <div class="collapse-content text-sm">
+        Here are the difference between innerHTML, innerText, and textContent:
+        1.innerHTML: It returns the html content of an element;
+        2.innerText:It returns the text content of an element;
+        3.textContent:It returns the text content of an element;
+      </div>
     </div>
     <div class="collapse bg-base-100 border border-base-300">
       <input type="radio" name="my-accordion-1" />
       <div class="collapse-title font-semibold">Question-3: What is event delegation in the DOM?</div>
-      <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
+      <div class="collapse-content text-sm">
+        Event deligation is a javascript technique of handling events where you delegate a parent element as a listner for all of its children.
+      </div>
     </div>
     <div class="collapse bg-base-100 border border-base-300">
       <input type="radio" name="my-accordion-1" />
       <div class="collapse-title font-semibold">Question-4: What is event bubbling in the DOM?</div>
-      <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
+      <div class="collapse-content text-sm">
+        Event bubbling in the DOM is a process where the event starts at the target element and bubbles up the DOM tree. 
+      </div>
     </div>
     <div class="collapse bg-base-100 border border-base-300">
       <input type="radio" name="my-accordion-1" />
       <div class="collapse-title font-semibold">Question-5: How do you create, add, and remove elements using JavaScript?</div>
-      <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
+      <div class="collapse-content text-sm">
+        Here are the steps to create, add, and remove elements using JavaScript:
+        1.Create an element using document.createElement method;
+        2.Add the element to the DOM using appendChild method;
+        3.Remove the element from the DOM using removeChild method;
+      </div>
     </div>
    </section>
 
