--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <!-- Main Board -->
     <section class="container mx-auto  mt-4 p-4 flex gap-4">
       <div class="bg-white shadow-md rounded-md p-4">
-        <div class="flex justify-between items-center gap-4">
+        <div class="grid  grid-cols-3 items-center gap-4">
           <div class="flex items-center gap-4 bg-[#F4F7FF] p-4 rounded-md mb-4">
             <img src="./assets/checkbox.png
             " alt="" srcset="" class="bg-white rounded-full p-3 ">
