--- a/index.html
+++ b/index.html
@@ -47,74 +47,74 @@
         <div class="grid grid-cols-3 gap-4">
           <div class="bg-[#F4F7FF] p-4 rounded-md">
             <span class="bg-white p-2 rounded-md mb-2">ShopEase</span>
-            <h1 id="card-head" class="my-[16px]">Fix Mobile Button Issue </h1>
+            <h1 id="" class="my-[16px]">Fix Mobile Button Issue </h1>
             <p class="bg-white p-2 rounded-md mb-2 " >Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
             <div class="flex justify-between items-center gap-4 border-t border-dashed border-[#D7DCFF]">
               <div class="flex flex-col gap-2">
                 <span>Deadline</span>
                 <span>21 March 2025</span>
               </div>
-              <button id="complete-btn" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
+              <button id="" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
             </div>
           </div>
           <div class="bg-[#F4F7FF] p-4 rounded-md">
             <span class="bg-white p-2 rounded-md mb-2">CloudSync</span>
-            <h1 id="card-head" class="my-[16px]">Add Dark Mode </h1>
+            <h1 id="" class="my-[16px]">Add Dark Mode </h1>
             <p class="bg-white p-2 rounded-md mb-2 " >Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
             <div class="flex justify-between items-center gap-4 border-t border-dashed border-[#D7DCFF]">
               <div class="flex flex-col gap-2">
                 <span>Deadline</span>
                 <span>21 March 2025</span>
               </div>
-              <button id="complete-btn" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
+              <button id="" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
             </div>
           </div>
           <div class="bg-[#F4F7FF] p-4 rounded-md">
             <span class="bg-white p-2 rounded-md mb-2">SwiftPay</span>
-            <h1 id="card-head" class="my-[16px]">Optimize  Home page  </h1>
+            <h1 id="" class="my-[16px]">Optimize  Home page  </h1>
             <p class="bg-white p-2 rounded-md mb-2 " >Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
             <div class="flex justify-between items-center gap-4 border-t border-dashed border-[#D7DCFF]">
               <div class="flex flex-col gap-2">
                 <span>Deadline</span>
                 <span>21 March 2025</span>
               </div>
-              <button id="complete-btn" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
+              <button id="" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
             </div>
           </div>
           <div class="bg-[#F4F7FF] p-4 rounded-md">
             <span class="bg-white p-2 rounded-md mb-2">Meta</span>
-            <h1 id="card-head" class="my-[16px]">Add new emoji 🤲 </h1>
+            <h1 id="" class="my-[16px]">Add new emoji 🤲 </h1>
             <p class="bg-white p-2 rounded-md mb-2 " >Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
             <div class="flex justify-between items-center gap-4 border-t border-dashed border-[#D7DCFF]">
               <div class="flex flex-col gap-2">
                 <span>Deadline</span>
                 <span>21 March 2025</span>
               </div>
-              <button id="complete-btn" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
+              <button id="" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
             </div>
           </div>
           <div class="bg-[#F4F7FF] p-4 rounded-md">
             <span class="bg-white p-2 rounded-md mb-2">Google LLC</span>
-            <h1 id="card-head" class="my-[16px] head">Integrate OpenAI API  </h1>
+            <h1 id="" class="my-[16px] head">Integrate OpenAI API  </h1>
             <p class="bg-white p-2 rounded-md mb-2 " >Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
             <div class="flex justify-between items-center gap-4 border-t border-dashed border-[#D7DCFF]">
               <div class="flex flex-col gap-2">
                 <span>Deadline</span>
                 <span>21 March 2025</span>
               </div>
-              <button id="complete-btn" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick(event)">Completed</button>
+              <button id="" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick(event)">Completed</button>
             </div>
           </div>
           <div class="bg-[#F4F7FF] p-4 rounded-md">
             <span class="bg-white p-2 rounded-md mb-2">Glassdoar</span>
-            <h1 id="card-head" class="my-[16px]">Improve Job searching  </h1>
+            <h1 id="" class="my-[16px]">Improve Job searching  </h1>
             <p class="bg-white p-2 rounded-md mb-2 " >Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
             <div class="flex justify-between items-center gap-4 border-t border-dashed border-[#D7DCFF]">
               <div class="flex flex-col gap-2">
                 <span>Deadline</span>
                 <span>21 March 2025</span>
               </div>
-              <button id="complete-btn" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
+              <button id="" class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer" onclick="handleClick()">Completed</button>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
           
           <button class="bg-[#3752FD] p-2 text-white rounded-md cursor-pointer mb-4 " onclick="handleHistory()">Clear History</button>
           <div id="history-list" class="border-t border-dashed border-[#D7DCFF]">
-            <p class="bg-[#F4F7FF] p-2 rounded-md mt-4">You have Complete The Task Add Dark Mode at 12:48:15 PM</p>
+            
           </div>
         </div>
       </div>
